# cobot

cobot_ws/src/mycobot_ros2/mycobot_280_gazebo/: CMakeLists.txt  package.xml
cobot_ws/src/mycobot_ros2/mycobot_280_gazebo/config/: mycobot_280_controllers.yaml
cobot_ws/src/mycobot_ros2/mycobot_280_gazebo/launch/: compute_rms.launch.py  home_all.launch.py  move_single_joint_with_plot.launch.py  multi_joint_trajectory.launch.py  mycobot_280_gazebo.launch.py  mycobot_280_world.launch.py
cobot_ws/src/mycobot_ros2/mycobot_280_gazebo/scripts/: log_joint_data.py  log_rms_tracking.py  move_single_joint.py  multi_joint_trajectory.py  plot_joint_feedback.py
cobot_ws/src/mycobot_ros2/mycobot_280_gazebo/urdf/: mycobot_280_gazebo.urdf  viz_only.urdf
cobot_ws_addition/src/mycobot_ros2/: General Commands
cobot_ws_addition/src/mycobot_ros2/mycobot_description/launch/: robot_state_publisher.launch.py
cobot_ws_addition/src/mycobot_ros2/mycobot_moveit_config/config/: ompl_planning.yaml  pilz_industrial_motion_planner_planning.yaml  stomp_planning.yaml
cobot_ws_addition/src/mycobot_ros2/mycobot_moveit_demos/src/: hello_moveit.cpp  plan_around_objects.cpp
cobot_ws_addition/src/mycobot_ros2/mycobot_mtc_demos/src/: fallbacks_move_to.cpp  ik_clearance_cost.cpp
cobot_ws_addition/src/mycobot_ros2/mycobot_mtc_pick_place_demo/src/: get_planning_scene_server.cpp  mtc_node.cpp
